# epub2pwa

./: .gitignore  Cargo.toml  all_books_local.json  all_devhap.json  batch_json_creator.livecode  dws.json  evernew-evernow.json  guru-chronicles.json  tales-about-religious-life.json  test.bat  trilogy.json  trilogy_devhap.json  wip.json  workbox-config.js
src/: main.rs
static/: app.js  mobile.css  reader.css  sw.js
templates/: index.html  manifest.webmanifest  page.html  toc.html
