[package]
name = "epub2pwa"
version = "0.1.0"
authors = ["andre alves garzia <andre@andregarzia.com>"]

[dependencies]
epub = "1.1.1"
handlebars = "0.32.4"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.20"
image = "*"
scraper = "0.7.0"
tera = "0.11.8"
lazy_static = "1.0.1"
fs_extra = "1.1.0"
xml-rs = "0.8.0"
clap = "2"
csv = "1"
